src/test/ui/generic-associated-types/projection-bound-cycle-generic.stderr
warning: the feature `generic_associated_types` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/projection-bound-cycle-generic.rs:4:12
   |
LL | #![feature(generic_associated_types)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #44265 <https://github.com/rust-lang/rust/issues/44265> for more information

error[E0275]: overflow evaluating the requirement `<Number<T> as Foo>::Item == _`
  --> $DIR/projection-bound-cycle-generic.rs:26:5
   |
LL |     type Item where [T]: Sized = [T];
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0275`.
